input validation text fix on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ button:hover {
 .validateFormText {
   width: fit-content;
   position: absolute;
-  right: 0px;
+  right: 1.6rem;
   color: hsl(4, 100%, 67%);
   font-size: 0.8rem;
 }
@@ -299,11 +299,7 @@ button:hover {
     flex-direction: column;
     align-items: baseline;
   }
-  .success-container p,
-  .success-container span,
-  .success-container button {
-    font-size: 16px;
-  }
+
   h1 {
     font-size: 3.4rem;
     text-align: center;
@@ -311,6 +307,10 @@ button:hover {
 
   form {
     grid-column: 1/2;
+  }
+
+  .validateFormText {
+    right: 0px;
   }
 
   .attribution {
